performance tuning and findBug cleanup